Upating js file

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
           <h1>Welcome to Web3Bridge</h1>
           <ul>
               <li><a href="#home">Home</a></li>
-              <li><a href="#events">Room</a></li>
-              <li><a href="#add-event">New Event</a></li>
+              <li><a href="#rooms">Room</a></li>
+              
           </ul>
         </nav>
         <div class="welcome-event"></div>
       </header>
       <main>
-          <section id="events">
+          <section id="rooms">
               <!-- <h1 class="section-title">Events</h1> -->
               <div class="events-container"></div>
           </section>
@@ -38,6 +38,8 @@
               </form>
           </section>
       </main>
+      <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-app.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-firestore.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
